--- a/Books.Web/Areas/Customer/Views/Home/Index.cshtml
+++ b/Books.Web/Areas/Customer/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
             <div class="row p-2">
                 <div class="col-12 p-1">
                     <div class="card border-0 p-3 shadow border-top border-5 rounded">
-                        <img src="@book.ImageUrl" class="card-img-top rounded" alt="Alternate Text" />
+                        <img src="@book.ImageUrl" class="card-img-top rounded" alt="Alternate Text" height="300px" />
                         <div class="card-body pb-0">
                             <div class="pl-1">
                                 <p class="card-title h5 text-dark opacity-75 text-uppercase text-center">@book.Title</p>
